--- a/default.conf
+++ b/default.conf
@@ -18,7 +18,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://sharder-server:8000;
+        proxy_pass http://server:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,5 +29,13 @@ server {
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
+    }
+}
+
+server {
+    listen 9113;
+
+    location /nginx_status {
+        stub_status on;
     }
 }
